@@ -30,7 +30,9 @@ set bug_id 0
 set testfile "store"
 set srcfile ${testfile}.c
 set binfile ${objdir}/${subdir}/${testfile}
-if {[istarget "*-apple-darwin*"]} {
+# APPLE LOCAL: Only gcc-4.0 accepts -Wno-long-double, 4.2 & above do not.  
+get_compiler_info not_used
+if {[istarget "*-apple-darwin*"] && [regexp {gcc-4-[01]} $compiler_info]} {
     set additional_flags "additional_flags=-Wno-long-double"
 } else {
     set additional_flags ""
